[project]
name = "mazegen"
version = "0.1.0"
description = "Maze generating module"
readme = "mazegen/README.md"
authors = [
  { name="pcoelho-", email="pcoelho-@student.42porto.com" },
  { name="gnadais-", email="gnadais-@student.42porto.com" }
]
requires-python = ">=3.10"
dependencies = [
  "pydantic==2.13.1"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen*"]